--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -3,7 +3,9 @@
 /* Logo */
 
 .navbar-brand {
+    // width: 255px;
     padding: 15px 30px 0 15px;
+    white-space: nowrap;
     @include max_laptop {
         padding: 15px 23px 0 15px;
     }
