--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -241,10 +241,11 @@
         padding-left: 10px;
     }
 }
-.media, .description{
+.description{
     margin-bottom: 10px;
 }
 .media {
+    margin-bottom: 30px;
     p {
         margin: 0;
     }
