--- a/assets/scss/_thumbs.scss
+++ b/assets/scss/_thumbs.scss
@@ -98,6 +98,11 @@ $thumb_hover:   $red;
 
 .thumb-title {
     min-height: 47px;
+    transition: none !important;
+
+    @include max_laptop{
+        font-size: 12px;
+    }
 
     /* @include max_tablet{
         min-height: 35px;
