--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -130,8 +130,8 @@
 .mq-list {
     padding-bottom: 30px;
 
-    @include max_laptop {
-        padding-bottom: 20px;
+    @include max_tablet {
+        padding-bottom: 0px;
     }
     li {
         margin-right: 18px;
@@ -250,7 +250,7 @@
 
     button {
         margin-top: 5px;
-        
+
         @include max_tablet {
             margin-top: 10px;
         }
@@ -275,9 +275,8 @@
         margin-bottom: 15px !important;
     }
 }
-.single-design .media {
-    @extend %boxShadow;
-    border: 1px solid black;
+.single-programmer .media {
+    margin-bottom: 20px;
 }
 
 
