--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -7,8 +7,11 @@ $masthead_height:   600px;
 $nav_height:        50px;
 $use_shadows:       false;
 
+/* Thumbs */
 $max_thumb: $pager + 140;
 
+/* Opaque Bg Value */
+$opaqueBg: 0.618;
 
 /* Body */
 $section_height: 700px;
