--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -14,6 +14,8 @@
  *  MIN / MAX
  */
 /* Nav */
+/* Thumbs */
+/* Opaque Bg Value */
 /* Body */
 /* Spacers */
 /* Colors */
@@ -136,7 +138,7 @@ time, mark, audio, video {
   text-align: right;
 }
 
-/* line 56, ../scss/_mixins.scss */
+/* line 63, ../scss/_mixins.scss */
 .thumbnail img {
   -webkit-filter: grayscale(1);
   -webkit-filter: grayscale(100%);
@@ -146,38 +148,38 @@ time, mark, audio, video {
   filter: url(desaturate.svg#greyscale);
 }
 
-/* line 61, ../scss/_mixins.scss */
+/* line 68, ../scss/_mixins.scss */
 .thumbnail:hover img, .thumbnail:focus img, #social-nav a:hover img {
   filter: none;
   /* Applies to FF + IE */
   -webkit-filter: grayscale(0);
 }
 
-/* line 90, ../scss/_mixins.scss */
+/* line 97, ../scss/_mixins.scss */
 #row-masthead {
   background-color: black;
   background-attachment: fixed;
   background-size: cover;
 }
 
-/* line 105, ../scss/_mixins.scss */
+/* line 112, ../scss/_mixins.scss */
 code, pre, .highlight {
   background-color: #666;
   border-color: #666;
 }
 
-/* line 109, ../scss/_mixins.scss */
+/* line 116, ../scss/_mixins.scss */
 .thumbnail {
   background-color: transparent;
   border: 0;
 }
 
-/* line 113, ../scss/_mixins.scss */
+/* line 120, ../scss/_mixins.scss */
 .navbar > .container {
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.618);
 }
 
-/* line 116, ../scss/_mixins.scss */
+/* line 123, ../scss/_mixins.scss */
 .hero-right, .design-slider {
   -webkit-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.7);
   -moz-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.7);
@@ -862,7 +864,7 @@ button {
   text-align: right;
 }
 
-/* line 56, ../scss/_mixins.scss */
+/* line 63, ../scss/_mixins.scss */
 .thumbnail img {
   -webkit-filter: grayscale(1);
   -webkit-filter: grayscale(100%);
@@ -872,38 +874,38 @@ button {
   filter: url(desaturate.svg#greyscale);
 }
 
-/* line 61, ../scss/_mixins.scss */
+/* line 68, ../scss/_mixins.scss */
 .thumbnail:hover img, .thumbnail:focus img, #social-nav a:hover img {
   filter: none;
   /* Applies to FF + IE */
   -webkit-filter: grayscale(0);
 }
 
-/* line 90, ../scss/_mixins.scss */
+/* line 97, ../scss/_mixins.scss */
 #row-masthead {
   background-color: black;
   background-attachment: fixed;
   background-size: cover;
 }
 
-/* line 105, ../scss/_mixins.scss */
+/* line 112, ../scss/_mixins.scss */
 code, pre, .highlight {
   background-color: #666;
   border-color: #666;
 }
 
-/* line 109, ../scss/_mixins.scss */
+/* line 116, ../scss/_mixins.scss */
 .thumbnail {
   background-color: transparent;
   border: 0;
 }
 
-/* line 113, ../scss/_mixins.scss */
+/* line 120, ../scss/_mixins.scss */
 .navbar > .container {
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.618);
 }
 
-/* line 116, ../scss/_mixins.scss */
+/* line 123, ../scss/_mixins.scss */
 .hero-right, .design-slider {
   -webkit-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.7);
   -moz-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.7);
@@ -1098,6 +1100,8 @@ section .col-sm-5, section .col-md-6 {
  *  MIN / MAX
  */
 /* Nav */
+/* Thumbs */
+/* Opaque Bg Value */
 /* Body */
 /* Spacers */
 /* Colors */
@@ -1317,7 +1321,7 @@ section .col-sm-5, section .col-md-6 {
   text-align: right;
 }
 
-/* line 56, ../scss/_mixins.scss */
+/* line 63, ../scss/_mixins.scss */
 .thumbnail img {
   -webkit-filter: grayscale(1);
   -webkit-filter: grayscale(100%);
@@ -1327,38 +1331,38 @@ section .col-sm-5, section .col-md-6 {
   filter: url(desaturate.svg#greyscale);
 }
 
-/* line 61, ../scss/_mixins.scss */
+/* line 68, ../scss/_mixins.scss */
 .thumbnail:hover img, .thumbnail:focus img, #social-nav a:hover img {
   filter: none;
   /* Applies to FF + IE */
   -webkit-filter: grayscale(0);
 }
 
-/* line 90, ../scss/_mixins.scss */
+/* line 97, ../scss/_mixins.scss */
 #row-masthead {
   background-color: black;
   background-attachment: fixed;
   background-size: cover;
 }
 
-/* line 105, ../scss/_mixins.scss */
+/* line 112, ../scss/_mixins.scss */
 code, pre, .highlight {
   background-color: #666;
   border-color: #666;
 }
 
-/* line 109, ../scss/_mixins.scss */
+/* line 116, ../scss/_mixins.scss */
 .thumbnail {
   background-color: transparent;
   border: 0;
 }
 
-/* line 113, ../scss/_mixins.scss */
+/* line 120, ../scss/_mixins.scss */
 .navbar > .container {
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.618);
 }
 
-/* line 116, ../scss/_mixins.scss */
+/* line 123, ../scss/_mixins.scss */
 .hero-right, .design-slider {
   -webkit-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.7);
   -moz-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.7);
